--- a/game/style.css
+++ b/game/style.css
@@ -65,15 +65,18 @@ html {
     flex-shrink: 0;
     font-size: 14px;
     font-weight: bolder;
-    font-family: "Libertinus Mono", monospace;
+    cursor: pointer;
+    /* font-family: "Libertinus Mono", monospace; */
 }
 
 .balance {
+    cursor: pointer;
     background: linear-gradient(45deg, #fff, #f8f9fa);
     color: #2c3e50;
     padding: 4px 8px;
     font-size: 14px;
     font-weight: 600;
+    width: 80px;
     min-width: 40px;
     border-radius: 15px;
     text-align: center;
@@ -82,15 +85,26 @@ html {
 
 .main-container {
     padding: 30px 20px;
+    background-color: rgba(230, 229, 227, 0.874);
 }
 
-
+.perfil-name {
+    font-weight: 600;
+    /* background-color: white; */
+    border-radius: 10px;
+    color: black;
+    padding: 2px;
+    text-align: center;
+    width: 120px;
+    height: 30px;
+}
 
 .menu-buttons {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
-    margin-bottom: 30px;
+    margin-bottom: 80px;
+    margin-top: 30px;
 }
 
 .menu-btn {
@@ -117,25 +131,30 @@ html {
 }
 
 .menu-btn.capture {
-    background: linear-gradient(135deg, #11998e 0%, #38ef7d 100%);
+    background: linear-gradient(180deg, #13b140 50%,  #50e67b 100%);
 }
 
 .menu-btn.boss {
-    background: linear-gradient(135deg, #fc466b 0%, #3f5efb 100%);
+    /* background: linear-gradient(180deg, #f7ff01 10%, #4e4103 90%); */
+    background: linear-gradient(180deg, #2a0c6a 50%,  #8b1ea3 100%);
+
 }
 
 .menu-btn.market {
-    background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
+    background: linear-gradient(180deg, #2E75B6 50%, #71b7e3 100%);
 }
 
 .menu-btn.collection {
-    background: linear-gradient(135deg, #ff9966 0%, #ff5e62 100%);
+    background: linear-gradient(180deg, #da2225 50%, #d9730d 100%);
 }
 
 .menu-btn.bag {
-    background: linear-gradient(135deg, #883701 10%, #b66e4a 90%);
+    background: linear-gradient(180deg, #823502 50%, #bf7048 100%);
 }
 
+.menu-btn.events {
+    background: linear-gradient(140deg, yellow 10%, black 70%);
+}
 
 .reward-popup {
     position: fixed;
@@ -152,18 +171,20 @@ html {
 }
 
 .pokemon-card {
-    background: rgba(255,255,255,0.95);
-    border-radius: 20px;
-    padding: 30px;
+    /* border: 6px double #000000; */
+    /* background: white; */
+    border-radius: 30px;
+    padding: 35px;
     margin-bottom: 30px;
-    box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+    box-shadow: 0 20px 60px rgba(0,0,0,0.1);
     backdrop-filter: blur(10px);
 }
 
 #selected-pokemon {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 20px;
+    place-items: center;
 }
 
 .pokemon-selected {
